# monorepo-activity-monitor

./: .gitignore  README.md  activity-monitor.code-workspace
desktop/: package.json  vite.config.ts
desktop/src/: App.svelte  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/activity/: Cargo.toml
desktop/src-tauri/activity/src/: lib.rs
desktop/src-tauri/src/: data_handler.rs  lib.rs  main.rs  user_settings.rs
desktop/src/Components/: Modal.svelte
desktop/src/lib/: DataTypes.ts  StoreData.ts  store.ts
desktop/src/lib/pages/: IndexPage.svelte  InfoPage.svelte  SettingsPage.svelte
web/backend/: db.go  go.mod  go.sum  main.go
web/frontend/: config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css  types.ts
web/frontend/src/pages/: user.tsx  users.tsx
