[package]
name = "activity_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "activity_manager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all", "system-tray"] }
activity = {path = "./activity"}
lazy_static = "1.4.0"

chrono = {verson= "0.4.19",features= ["serde"] }
bincode = {version = "2.0.0-rc.1", features = ["serde"] }
reqwest = {version="0.11.11",features= ["stream","json","multipart"] }
tokio = { version = "1.19.2", features= ["full"] }

[workspace]
member = ["activity"]
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
