[package]
name = "activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.38.0",features = [
"Win32_Foundation",
"Win32_System_Threading",
"Win32_System_Diagnostics_ToolHelp",
"Win32_Storage_FileSystem",
"Win32_System_ProcessStatus",
"Win32_System_Time",
# do i now have core? find out next time??
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "alloc",

]}
chrono = {verson= "0.4.19",features= ["serde"] }
